# natsort

./: README.md  meson.build
include/: strnatcmp.h
src/: strnatcmp.c
